Fix latest changes UI overlapping in Insights

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -612,6 +612,11 @@ form + .login-label {
   margin-top: 55px;
 }
 
+#changes-table {
+  margin-top: 40px;
+  width: 100%;
+}
+
 .btn-float {
   display: flex;
   gap: 5px;
@@ -628,6 +633,17 @@ form + .login-label {
 @media only screen and (max-width: 600px) {
   .btn-float {
     left: 20px;
+  }
+
+  #latest-changes {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  }
+
+  #changes-item {
+    display: flex;
+    flex-direction: column;
   }
 }
 
